# macos-dualpane

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: SIGNING.md  SPEC.md
src/: App.tsx  dnd.ts  i18n.ts  ipc.ts  jobs.ts  keymap.ts  main.tsx  network.ts  paths.test.ts  paths.ts  persist.ts  promiseDrop.ts  rename.test.ts  rename.ts  state.test.ts  state.ts  styles.css  sync.ts  syncProfiles.ts  theme.ts  types.ts  undo.ts  windowState.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  promise_drag.h  promise_drag.m  promise_drag.rs
src/components/: AboutDialog.tsx  AppIcon.tsx  ConflictDialog.tsx  Dialogs.tsx  FileIcon.tsx  HelpDialog.tsx  JobBar.tsx  Pane.tsx  PathBar.tsx  PreviewPane.tsx  PropertiesDialog.tsx  RenameDialog.tsx  RsyncDialog.tsx  SearchDialog.tsx  Sidebar.tsx  Statusbar.tsx  SyncDialog.tsx  TabBar.tsx  TimeMachineDialog.tsx
src/locale/: de.ts  en.ts
