[package]
name = "dualbeam"
version = "0.1.0"
description = "DualBeam — Dual-Pane File Manager für macOS"
authors = ["N.J."]
license = "MIT"
edition = "2021"

[lib]
name = "dualbeam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Standard-Build (persönliche Variante) enthält die IONOS-HiDrive-Voreinstellung.
# Für die öffentliche Version mit `--no-default-features` bauen, dann wird keine
# personenbezogene Netzwerk-Voreinstellung ins Binary kompiliert.
default = ["hidrive"]
hidrive = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
trash = "5"
notify = "6"
notify-debouncer-mini = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
