[package]
name = "dualbeam"
version = "0.1.0"
description = "DualBeam — Dual-Pane File Manager für macOS"
authors = ["N.J."]
license = "MIT"
edition = "2021"

[lib]
name = "dualbeam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Öffentliche Builds enthalten keine vordefinierte externe Netzwerkadresse.
# Die persönliche HiDrive-Voreinstellung muss bewusst mit `--features hidrive`
# angefordert werden.
default = []
hidrive = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
trash = "5"
notify = "6"
notify-debouncer-mini = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
libc = "0.2"
url = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
